--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "hoist-non-react-statics": "^3.3.2",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-gesture-handler": "^2.16.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "~3.29.0"
