--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "expo": "~50.0.14",
+    "expo-splash-screen": "^0.26.4",
     "expo-status-bar": "~1.11.1",
     "express": "^4.19.2",
     "mssql": "^10.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-gesture-handler": "^2.16.0",
+    "react-native-reanimated": "^3.8.1",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
