--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
+    "axios": "^1.6.8",
+    "cors": "^2.8.5",
     "expo": "~50.0.14",
+    "expo-splash-screen": "^0.26.4",
     "expo-status-bar": "~1.11.1",
+    "express": "^4.19.2",
+    "mssql": "^10.0.2",
     "react": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-web": "~0.19.6",
     "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.1.3"
+    "react-native": "0.73.6",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
