La aplicación hace post al realizar un reporte

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "expo": "~50.0.14",
+    "expo-file-system": "^16.0.8",
+    "expo-image-picker": "^14.7.1",
+    "expo-media-library": "^15.9.1",
     "expo-splash-screen": "^0.26.4",
     "expo-status-bar": "~1.11.1",
     "express": "^4.19.2",
