--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "state-pool": "^0.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
