--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "expo": "~50.0.14",
     "expo-file-system": "^16.0.8",
@@ -21,13 +22,21 @@
     "expo-splash-screen": "^0.26.4",
     "expo-status-bar": "~1.11.1",
     "express": "^4.19.2",
+    "express-fileupload": "^1.5.0",
+    "formidable": "^3.5.1",
     "mssql": "^10.0.2",
     "multer": "^1.4.5-lts.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-expo-image-cache": "^4.1.0",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.16.0",
+    "react-native-reanimated": "^3.8.1",
     "react-native-web": "~0.19.6",
-    "state-pool": "^0.10.1"
+    "request-promise": "^4.2.6",
+    "state-pool": "^0.10.1",
+    "superagent": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
