--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^3.31.1",
     "react-native-web": "~0.19.6",
-    "react-navigation": "^5.0.0",
+    "react-native-webview": "^13.8.6",
+    "react-navigation": "^4.1.1",
     "react-navigation-stack": "^2.10.4",
     "request-promise": "^4.2.6",
     "state-pool": "^0.10.1",
